--- a/FFXIVTrainer/FFXIVTrainer.vcxproj
+++ b/FFXIVTrainer/FFXIVTrainer.vcxproj
@@ -152,11 +152,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="settings.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FFXIVTrainer.cpp" />
+    <ClCompile Include="settings.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
