--- a/FFXIVTrainer/FFXIVTrainer.vcxproj.filters
+++ b/FFXIVTrainer/FFXIVTrainer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="settings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ffxiv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ffxiv.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
