--- a/FFXIVTrainer/FFXIVTrainer.vcxproj.filters
+++ b/FFXIVTrainer/FFXIVTrainer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="registry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FFXIVTrainer.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="registry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
