hiding console window

--- a/ffxiv.cfg
+++ b/ffxiv.cfg
@@ -2,10 +2,10 @@
 
 
 // Start when windows starts? (true/false, default false)
-autostart = true;
+autostart = false;
 
 // Hide program window? (true/false, default false)
-autostart_hidden = false;
+hide_window = false;
 
 // Custom camera max zoom value (20 - 1000000, default 100)
 // For a reference, 20 is the unchanged in-game value
