hotkeys working now, cleaned code a bit

--- a/ffxiv.cfg
+++ b/ffxiv.cfg
@@ -14,9 +14,9 @@ max_zoom  = 100;
 // Enable a hotkey for toggling between unchanged and custom value? (true/false, default false)
 toggle = false;
 
-// Key to register for toggle (default 42 = 'b')
+// Key to register for toggle (default 0x42 = 'b')
 // Find key codes here: https://msdn.microsoft.com/en-us/library/windows/desktop/dd375731(v=vs.85).aspx
-toggle_key = 42;
+toggle_key = 0x42;
 
 // Modifier to be used with toggle_key (default 1 = ALT)
 // NONE = 0, ALT = 1, CONTROL = 2, SHIFT = 4, or a sum of these values
