--- a/ffxiv.cfg
+++ b/ffxiv.cfg
@@ -7,6 +7,9 @@ autostart = false;
 // Hide program window? (true/false, default false)
 hide_window = false;
 
+// Enable debug info? (true/false, default false)
+debug = false;
+
 // Custom camera max zoom value (20 - 1000000, default 100)
 // For a reference, 20 is the unchanged in-game value
 max_zoom  = 100;
